[#18096] Publish startup state before the cache
DefaultCacheManager.wireAndStartCache() completed cacheFuture, which
unblocks every thread waiting in getCache(), before the startup task
wrote READY. A caller could therefore hold a running cache and still
observe CacheStartupState.STARTING.

CacheStartupManager.cacheStarted() is now invoked after cache.start()
and before cacheFuture.complete(). It uses computeIfPresent so internal
caches and caches created after the container started are not pulled
into the map, and it also covers a cache that recovers on a later
getCache() after failing at boot.

taskCompleted() merges instead of overwriting, so a late callback cannot
downgrade a READY cache to FAILED, and getAllStates() returns
Map.copyOf() - Collections.unmodifiableMap was a live view, not the
snapshot its javadoc promised.